# Stixx

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  RunBenchmarks.bat
cmake_helpers/: AddMicroTest.cmake  EnableCXX17.cmake  GTest.cmake
glfw/: WindowGlfw.hpp
infra/: ImageOperation.cpp  ImageOperation.hpp  ImageTga.cpp  ImageTga.hpp  LeanVector.hpp  MemoryRange.hpp  PolyVariant.hpp  SpinLock.cpp  StridedIterator.hpp
interactors/: InputInteractor.cpp
interfaces/: FileSystem.hpp  Image.hpp  Input.hpp  Window.hpp
interfaces/renderer/: Model.hpp  Renderer.hpp
platform/: FileSystemImpl.cpp  FileSystemImpl.hpp
sources/: Buffer  Buffer.hpp  LeanVector.hpp  MemoryView.hpp  PolyVariant.hpp  Sort.h  SpinLock.cpp  StackVector.hpp  StridedIterator.hpp  TemplateHelper.h
test/: AddMicroTest.cmake  AlgorithmBiliniarTest.cpp  CMakeLists.txt  LeanVectorTest.cpp  MemoryRangeTest.cpp  ObserverTest.cpp  PolyVariantTest.cpp  SortBenchmark.cpp  SortTest.cpp  StridedIteratorTest.cpp  test.cpp
utils/: AlgorithmBilinear.hpp  CastOperator.hpp  Sort.h
